ui: Catch up with latest backend changes (#144)
