# internal/apexcontroller/controller.go
@@ -144,13 +144,16 @@ func NewController(ctx context.Context, dbHost string, dbPass string, ipamAddres
 	private.GET("/zones", ct.handleListZones)
 	private.POST("/zones", ct.handlePostZones)
 	private.GET("/zones/:zone", ct.handleGetZones)
-	private.GET("/zones/:zone/peers", ct.handleListPeers)
-	private.POST("/zones/:zone/peers", ct.handlePostPeers)
-	private.GET("/zones/:zone/peers/:id", ct.handleGetPeers)
+	private.GET("/zones/:zone/peers", ct.handleListZonePeers)
+	private.POST("/zones/:zone/peers", ct.handlePostZonePeers)
+	private.GET("/zones/:zone/peers/:id", ct.handleGetZonePeers)
 	private.GET("/devices", ct.handleListDevices)
 	private.GET("/devices/:id", ct.handleGetDevices)
 	private.POST("/devices", ct.handlePostDevices)
+	private.GET("/peers", ct.handleListPeers)
+	private.GET("/peers/:id", ct.handleGetPeers)
 	private.GET("/users/:id", ct.handleGetUser)
+	private.GET("/users", ct.handleListUsers)
 	private.PATCH("/users/:id", ct.handlePatchUser)
 
 	ct.Router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
